# yfcc-scope

./: .gitignore  App.jsx  App3DPCAExplorer.jsx  AppLibraryViewer.jsx  README.md  dotenv.example  hatch_build.py  pyproject.toml  requirements.txt  starlett_app_library.py  starlett_app_with_api.py  starlette_app.py  starlette_app_library.py  yfcc_yolo_to_postgres-entire-shard-batch.py  yfcc_yolo_to_postgres.py
archived/: run_uvicorn_thread_dev_server.py  starlett_app_3d.py  starlett_app_with_api.py  starlette_app.py  yfcc_yolo_to_postgres-shards-batch_query_metadata.py  yfcc_yolo_to_postgres.py
clip-embedding/: clip_to_postgres.py  text_query.py  yfcc_img_to_clip.ipynb  yfcc_img_to_clip.py
metadata/: csv2json.py  duckdb2postgres.py  json2duckdb.py
src/yfcc_scope/: app.py  cli.py  constants.py  db.py  log.py  routes.py  settings.py  utils.py
src/yfcc_scope/bboxviewer/: app.py  db.py
src/yfcc_scope/templates/: index.html
yfcc-app/: .env.example  app.py  constants.py  db.py  log.py  routes.py  utils.py
yfcc-app/static/css/: app.css
yfcc-app/static/js/: freqs.js
yfcc-app/templates/: index.html
yfcc-viewer/: index.html  package-lock.json  package.json  vite.config.js
yfcc-viewer/src/: App.css  App.jsx  AppDashboard.jsx  AppImageViewer.css  AppImageViewer.jsx  AppPCA3DExplorer.jsx  main.jsx  sqlPrompt.js
yfcc-viewer/src/image-viewer/: AppImageViewer.css  AppImageViewer.jsx  ClipSearchPanel.jsx  CocoSearchPanel.jsx  Gallery.jsx  ImageResultsPanel.jsx  SearchControlPanel.jsx  (+3 more)
yolo-to-postgres/: missing_images.ipynb  yfcc_yolo_to_postgres-entire-shard-batch.py
(+3 files in other folders)
