[project]
name = "yfcc-scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "niquests>=3.20.1",
    "numpy>=2.2.6",
    "open-clip-torch>=3.3.0",
    "pgvector>=0.5.0",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "starlette>=1.3.1",
    "stream-zip>=0.0.84",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "typer>=0.27.0",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.56",
]
jupyter = [
    "ipykernel>=7.3.0",
    "wids>=0.1.11",
]

[project.scripts]
yfcc-viewer = "yfcc_scope.cli:app"

[tool.ruff]
target-version = "py310"
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118" }
]
torchvision = [
    { index = "pytorch-cu118" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
    "/src/yfcc_scope/dist/**/*",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/archived",
    "/yfcc-viewer",
]

[tool.hatch.build.hooks.custom]
# Hooks in hatch_build.py
